tests/app1/app-hello.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
  labels:
    name: app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: app1
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: "gcr.io/google-samples/hello-app:2.0"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: app1
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
