tests/app1/app-ingress-hello.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: app1
  annotations:
   kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: app1.conectado.local
    http:
      paths:
      - backend:
          serviceName: hello-service
          servicePort: 80
        path: /
